WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59402
fix OwnPtr strict error in FrameView.cpp
https://bugs.webkit.org/show_bug.cgi?id=59402
Summary
fix OwnPtr strict error in FrameView.cpp
Ojan Vafai
Reported
2011-04-25 16:52:38 PDT
fix OwnPtr strict error in FrameView.cpp
Attachments
Patch
(1.60 KB, patch)
2011-04-25 16:53 PDT
,
Ojan Vafai
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2011-04-25 16:53:02 PDT
Created
attachment 91021
[details]
Patch
Ojan Vafai
Comment 2
2011-04-25 16:57:15 PDT
Committed
r84848
: <
http://trac.webkit.org/changeset/84848
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug