2011-04-25  Ojan Vafai  <ojan@chromium.org>

Reviewed by James Robinson.

        fix OwnPtr strict error in FrameView.cpp
        https://bugs.webkit.org/show_bug.cgi?id=59402

        * page/FrameView.cpp:
        (WebCore::FrameView::FrameView):
        (WebCore::FrameView::addWidgetToUpdate):

Canonical link: https://commits.webkit.org/74575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84848 268f45cc-cd09-0410-ab3c-d52691b4dbfc